# spn_coordinator

./: .gitignore  Cargo.toml  Dockerfile  README.md  diagram  docker-compose.yml
crates/logger/: Cargo.toml
crates/logger/src/: logger.rs
crates/types/rpc/: Cargo.toml  build.rs
crates/types/rpc/src/: lib.rs
proto/: network.proto
src/client/: client.rs
src/client/elf/: fibonacci-program
src/server/: artifacts_service.rs  http_server.rs  mod.rs  prover_network_service.rs  server.rs  service.rs
testing-cert/: ca.key  ca.pem  server.key  server.pem
tools/grpcclient/: Cargo.toml  README.md  main.rs
tools/grpcclient/src/: client.rs  lib.rs  utils.rs
tools/grpcclient/src/commands/: get_program.rs  mod.rs  proof_details.rs  proof_status.rs  verify_proof.rs
