[package]
name = "logger"
description = "Custom logger"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
time = { version = "0.3.41", features = ["macros"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "ansi", "time"] }
