[package]
name = "rpc-types"
description = "Network types for SPN."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, optional = true }
alloy-signer = { workspace = true }
alloy-primitives = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
network = ["dep:alloy"]

